--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 
 HELP.md
 .gradle
+.env
 build/
+
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -17,6 +19,7 @@ build/
 .springBeans
 .sts4-cache
 bin/
+
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
@@ -30,13 +33,14 @@ bin/
 .mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
+.jar
+.war
+.nar
+.ear
 *.zip
 *.tar.gz
 *.rar
+*.bak
 
 ### IntelliJ IDEA ###
 .idea
