--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,7 +21,9 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Code checkout
+      uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -37,7 +39,24 @@ jobs:
       run: chmod +755 ./gradlew
 
     - name: Build with Gradle Wrapper
-      run: ./gradlew build --scan
+      run: ./gradlew clean build test --build-cache --stacktrace --scan
+
+    - name: GITHUB variables
+      run: echo $GITHUB_ENV
+
+    # Put current date into a variable to append to Artifact zip file
+    - name: Dynamically set PRESENT_TIME environment variable
+      run: echo "PRESENT_TIME=$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.3.1
+      with:
+        name: artifact-Wildcard-${{ env.PRESENT_TIME }}
+        path: ./build/**/*.jar
+        if-no-files-found: warn
+        retention-days: 1
+        compression-level: 4
+        overwrite: false
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
@@ -57,13 +76,18 @@ jobs:
       contents: write
 
     steps:
-    - uses: actions/checkout@v4
+    - name: dependancy-checkout
+      uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: file permission
+      run: chmod +755 ./gradlew
+      
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
